--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,14 @@
 Django==5.0
 djangorestframework==3.15.1
-
 Pillow==10.2.0
 numpy==1.26.4
-
 rembg[onnx]==2.0.57
 onnxruntime==1.17.1
-
 mysqlclient==2.2.4
-
 celery==5.3.6
 redis==5.0.1
+gunicorn==21.2.0
+dj-database-url==2.1.0
+python-dotenv==1.0.0
+psycopg2-binary==2.9.9
+whitenoise==6.6.0
